--- a/package.json
+++ b/package.json
@@ -1,15 +1,28 @@
 {
   "name": "todo",
   "version": "0.1.0",
+  "main": "index.js",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "html-webpack-plugin": "^5.5.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "register-service-worker": "^1.7.2",
+    "semantic-ui-react": "^2.1.4",
+    "styled-component": "^2.8.0",
+    "styled-components": "^5.3.6",
+    "uuid": "^9.0.0",
+    "web-vitals": "^2.1.4",
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
